# cardano-serialization-lib

./: .gitignore  .gitmodules  .mocharc.js  CONTRIBUTING.md  LICENSE  README.md  README.rst  build-and-test.sh  package-lock.json  package.json  release.sh  sonar-project.properties  test.sh  tsconfig.json  tsconfig.tsbuildinfo
cddl_test/: Cargo.toml  README.md  supported.cddl
cddl_test/src/: codegen_helpers.rs  main.rs
cddl_test/static/: Cargo.toml  prelude.rs
rust/: Cargo.toml
rust/bench/: Cargo.toml
rust/bench/benches/: benches_main.rs  block_bench.rs
rust/json-gen/: Cargo.toml
rust/json-gen/src/: main.rs
rust/pkg/: cardano_serialization_lib.js.flow  cddl_lib.js.flow
rust/src/: address.rs  constants.rs  crypto.rs  emip3.rs  error.rs  fakes.rs  fees.rs  groups.rs  js_chain_libs.rs  lib.rs  macros.rs  metadata.rs  output_builder.rs  plutus.rs  prelude.rs  rational.rs  serialization.rs  serialization_macros.rs  traits.rs  tx_builder.rs  tx_builder_constants.rs  utils.rs  witness_builder.rs
rust/src/builders/: certificates_builder.rs  fakes.rs  mint_builder.rs  mod.rs  output_builder.rs  script_structs.rs  tx_batch_builder.rs  tx_builder.rs  tx_builder_constants.rs  tx_inputs_builder.rs  voting_builder.rs  voting_proposal_builder.rs  withdrawals_builder.rs
rust/src/builders/batch_tools/: asset_categorizer.rs  assets_calculator.rs  cbor_calculator.rs  indexes.rs  mod.rs  proposals.rs  utxo_stat.rs  witnesses_calculator.rs
rust/src/builders/script_structs/: datum_source.rs  mod.rs  native_script_source.rs  plutus_script_ref.rs  plutus_script_source.rs  plutus_witness.rs  plutus_witnesses.rs  script_witness_type.rs
rust/src/chain_core/: mod.rs
rust/src/chain_crypto/: bech32.rs  derive.rs  evolving.rs  kes.rs  key.rs  mod.rs  role.rs  sign.rs  testing.rs  vrf.rs
rust/src/chain_crypto/algorithms/: ed25519.rs  ed25519_derive.rs  ed25519_extended.rs  legacy_daedalus.rs  mod.rs
rust/src/impl_mockchain/: README.md  key.rs
rust/src/legacy_address/: address.rs  cbor.rs  crc32.rs  hdpayload.rs  mod.rs
rust/src/protocol_types/: address.rs  credential.rs  credentials.rs  ed25519_key_hashes.rs  fixed_tx.rs  metadata.rs  mod.rs  native_script.rs  native_scripts.rs  plutus.rs  pointer.rs  protocol_param_update.rs  script_ref.rs  tests.rs  transaction_body.rs  tx_inputs.rs
rust/src/protocol_types/block/: block.rs  fixed_block.rs  fixed_transaction_bodies.rs  fixed_tx_body.rs  fixed_versioned_block.rs  header.rs  header_body.rs  mod.rs  operational_cert.rs  transaction_bodies.rs  versioned_block.rs
rust/src/protocol_types/certificates/: certificate.rs  certificates_collection.rs  committee_cold_resign.rs  committee_hot_auth.rs  committee_hot_key_deregistration.rs  committee_hot_key_registration.rs  drep_deregistration.rs  drep_registration.rs  drep_update.rs  genesis_key_delegation.rs  mod.rs  move_instantaneous_rewards_cert.rs  pool_registration.rs  pool_retirement.rs  stake_and_vote_delegation.rs  stake_delegation.rs  stake_deregistration.rs  stake_registration.rs  stake_registration_and_delegation.rs  stake_vote_registration_and_delegation.rs  vote_delegation.rs  vote_registration_and_delegation.rs
rust/src/protocol_types/crypto/: bip32_private_key.rs  bip32_public_key.rs  impl_hash_type_macro.rs  impl_signature_macro.rs  kes_signature.rs  legacy_daedalus_private_key.rs  macro_implemented_hash_types.rs  macro_implemented_signature_types.rs  mod.rs  nonce.rs  private_key.rs  public_key.rs  public_keys.rs  vkey.rs  vkeys.rs  vrf_cert.rs
rust/src/protocol_types/governance/: anchor.rs  cip129_decoder.rs  drep.rs  governance_action_id.rs  governance_action_ids.rs  mod.rs  voter.rs  voters.rs  voting_procedure.rs  voting_procedures.rs
rust/src/protocol_types/numeric/: big_int.rs  big_num.rs  int.rs  mod.rs
rust/src/protocol_types/plutus/: cost_model.rs  cost_models.rs  ex_unit_prices.rs  ex_units.rs  language.rs  languages.rs  mod.rs  plutus_data.rs  plutus_script.rs  plutus_scripts.rs  redeemer.rs  redeemer_tag.rs  redeemers.rs  strings.rs
rust/src/protocol_types/witnesses/: bootstrap_witness.rs  bootstrap_witnesses.rs  fixed_tx_witnesses_set.rs  mod.rs  transaction_witnesses_set.rs  transaction_witnesses_sets.rs  vkeywitness.rs  vkeywitnesses.rs
rust/src/ser_info/: types.rs
rust/src/serialization/: credential.rs  credentials.rs  ed25519_key_hashes.rs  fixed_tx.rs  general.rs  map_names.rs  metadata.rs  mod.rs  native_script.rs  native_scripts.rs  plutus.rs  protocol_param_update.rs  script_ref.rs  serialization_macros.rs  struct_checks.rs  traits.rs  transaction_body.rs  tx_input.rs  tx_inputs.rs  utils.rs
rust/src/serialization/block/: block.rs  fixed_block.rs  fixed_transaction_bodies.rs  fixed_transaction_body.rs  fixed_versioned_block.rs  header.rs  header_body.rs  mod.rs  operational_cert.rs  transaction_bodies.rs  versioned_block.rs
rust/src/serialization/certificates/: certificate.rs  certificates_collection.rs  committee_cold_resign.rs  committee_hot_auth.rs  committee_hot_key_deregistration.rs  committee_hot_key_registration.rs  drep_deregistration.rs  drep_registration.rs  drep_update.rs  genesis_key_delegation.rs  mod.rs  move_instantaneous_rewards_cert.rs  pool_registration.rs  pool_retirement.rs  stake_and_vote_delegation.rs  stake_delegation.rs  stake_deregistration.rs  stake_registration.rs  stake_registration_and_delegation.rs  stake_vote_registration_and_delegation.rs  vote_delegation.rs  vote_registration_and_delegation.rs
rust/src/serialization/crypto/: kes_signature.rs  mod.rs  nonce.rs  vkey.rs  vkeys.rs  vrf_cert.rs
rust/src/serialization/governance/: anchor.rs  drep.rs  governance_action_id.rs  (+4 more)
rust/src/serialization_tools/: map_names.rs  mod.rs
rust/src/tests/: address.rs  crypto.rs  emip3.rs  fakes.rs  fees.rs  general.rs  helpers.rs  metadata.rs  mock_objects.rs  mod.rs  plutus.rs  pointer.rs  utils.rs
rust/src/tx_builder/: certificates_builder.rs  mint_builder.rs  script_structs.rs  test_batch.rs  tx_batch_builder.rs  tx_inputs_builder.rs  voting_builder.rs  voting_proposal_builder.rs  withdrawals_builder.rs
(+227 files in other folders)
