[package]
name = "cddl_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_cbor = "0.11.1"
cddl = "0.3.18"
serde = { version = "1.0", default-features = false, features = ["derive"] }
codegen = "0.1.1"
