[package]
name = "cddl_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbor_event = "2.1.3"
#cddl = "0.3.18"
cddl = { git = "https://github.com/anweiss/cddl", branch = "fix-grpchoice-parsing" }
codegen = "0.1.1"
wasm-bindgen = { version = "0.2", features=["serde-serialize"] }
