[package]
name = "cddl_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbor_event = "2.1.3"
#cddl = "0.4.0"
cddl = { git = "https://github.com/anweiss/cddl", branch = "master" }
codegen = "0.1.1"
