[package]
name = "cardano-serialization-lib"
version = "10.0.4"
edition = "2018"
authors = ["EMURGO"]
license = "MIT"
description = "(De)serialization functions for the Cardano blockchain along with related utility functions"
documentation = "https://docs.cardano.org/cardano-components/cardano-serialization-lib"
repository = "https://github.com/Emurgo/cardano-serialization-lib"
readme="../README.md"
exclude = [
    "pkg/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cryptoxide = "0.4.2"
cbor_event = "2.1.3"
ed25519-bip32 = "0.4.1"
sha2 = "^0.9"
digest = "^0.9"
bech32 = "0.8.1"
hex = "0.4.0"
cfg-if = "1"
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
num-bigint = "0.4.0"
# The default can't be compiled to wasm, so it's necessary to use either the 'nightly'
# feature or this one
clear_on_drop = { version = "0.2", features = ["no_cc"] }
itertools = "0.10.1"
getrandom = { version = "0.2.3", features = ["js"] }
rand = "0.8.4"

# non-wasm
[target.'cfg(not(all(target_arch = "wasm32", not(target_os = "emscripten"))))'.dependencies]
rand_os = "0.1"
noop_proc_macro = "0.3.0"

# wasm
[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
wasm-bindgen = "=0.2.78"
rand_os = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "=0.3.51"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand_os = "0.1"
rand_chacha = "0.1"
