[package]
name = "cardano-serialization-lib-json-schema-gen"
version = "0.0.1"
edition = "2018"
authors = ["EMURGO"]
license = "MIT"


[dependencies]
serde_json = { version = "1.0.114", features = ["arbitrary_precision"] }
schemars = "0.8.8"
#serde = { version = "1.0", features = ["derive"] }
cardano-serialization-lib = { path = ".." }
